--- a/src/componentes/Evento/evento.css
+++ b/src/componentes/Evento/evento.css
@@ -61,5 +61,10 @@
     border: none;
     padding: 0.25rem;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.delete{
+    background-color: #ff0000bb;
 }
