--- a/src/componentes/Nav/nav.css
+++ b/src/componentes/Nav/nav.css
@@ -41,6 +41,25 @@ nav{
         .link-login{
             text-decoration: none;
         }
+        .link{
+            text-decoration: none;
+        }
+        .cart-button{  
+            display: flex;
+            align-items: center;
+            gap: 0.7rem;
+            background-color: #DA6918;
+            padding: .5rem 1.1rem;
+            border-radius: 20px;
+            transition: all 0.3s ease-in-out;
+            span{
+                font-weight: bold;
+                font-size: 1.1rem;
+            }
+        }
+        .cart-button:hover{
+            background-color: #da6918b4;
+        }
     
     }
 }
