se puede entrar a la vista del evento desde el carrito

--- a/src/componentes/Contact/contact.css
+++ b/src/componentes/Contact/contact.css
@@ -51,9 +51,13 @@ gap:2rem;
             align-items: center;
             justify-content: left;
             gap:2rem;
-           
+          
             padding-bottom: .5rem;
             padding-left: 0;
+
+            .text{
+                text-decoration: none;
+            }
         }
     }
 }
