--- a/src/componentes/Contact/contact.css
+++ b/src/componentes/Contact/contact.css
@@ -32,14 +32,22 @@ gap:2rem;
     
     
     gap:3.5rem;
+
+
+    .maquilon{
+        width: 25rem;
+        height: 25rem;
+        
+    }
     .contact-information{
         display: flex;
         flex-direction: column;
         font-size: 1.5rem;
         border-radius: 8px;
+        justify-content: center;
         border:#DA6918 solid 1.5px;
-
-        padding:2rem 9rem 0 2rem;
+        
+        padding:1rem 9rem 0 2rem;
         .titulo-contact-information{
             font-size: 2rem;
             color:#DA6918;
