Cursor pointer xd

--- a/src/componentes/ShoppingCart/shoppingCart.css
+++ b/src/componentes/ShoppingCart/shoppingCart.css
@@ -27,6 +27,7 @@
         
         .botones_elemento{
             padding:.7rem 10rem;
+            cursor: pointer;
         }
         .checkout{
             background-color: #DA6918;
